syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.postchain.server.service";
option java_outer_classname = "PostchainProto";

package postchain.rpc;


service PostchainService {
  rpc StartBlockchain (StartBlockchainRequest) returns (StartBlockchainReply) {} // Start blockchain with ID
  rpc StopBlockchain (StopBlockchainRequest) returns (StopBlockchainReply) {} // Stop blockchain with ID
  rpc InitializeBlockchain (InitializeBlockchainRequest) returns (InitializeBlockchainReply) {} // Adds and starts blockchain
  rpc AddConfiguration (AddConfigurationRequest) returns (AddConfigurationReply) {} // Add configuration at height
}

service PeerService {
  rpc AddPeer (AddPeerRequest) returns (AddPeerReply) {}
  rpc ListPeers (ListPeersRequest) returns (ListPeersReply) {}
  rpc RemovePeer (RemovePeerRequest) returns (RemovePeerReply) {}
}

service DebugService {
  rpc DebugService (DebugRequest) returns (DebugReply) {}
}

message InitializeBlockchainRequest {
  int64 chainId = 1;
  optional bool override = 2;
  optional string xml = 3;
  optional bytes gtv = 4;
}

message InitializeBlockchainReply {
  bool success = 1;
  string message = 2;
}

message AddConfigurationRequest {
  int64 chainId = 1;
  int64 height = 2;
  optional bool override = 3;
  optional string xml = 4;
  optional bytes gtv = 5;
}

message AddConfigurationReply {
  string message = 1;
}

message StartBlockchainRequest {
  int64 chainId = 1;
}

message StartBlockchainReply {
  string message = 1;
}

message StopBlockchainRequest {
  int64 chainId = 1;
}

message StopBlockchainReply {
  string message = 1;
}

message AddPeerRequest {
  string host = 1;
  int32 port = 2;
  string pubkey = 3;
  optional bool override = 4;
}

message AddPeerReply {
  string message = 1;
}

message RemovePeerRequest {
  string pubkey = 1;
}

message RemovePeerReply {
  string message = 1;
}

message ListPeersRequest {}

message ListPeersReply {
  string message = 1;
}

message DebugRequest {}

message DebugReply {
  string message = 1;
}
